--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "react": "16.0.0",
     "react-native": "0.51.0",
-    "react-native-navigation": "^1.1.334",
+    "react-navigation": "^1.0.0-beta.23",
     "seamless-immutable": "^7.1.2"
   },
   "devDependencies": {
