--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "lint": "eslint --ext .js ./src --fix"
   },
   "dependencies": {
+    "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-native": "0.51.0",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.23",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
     "seamless-immutable": "^7.1.2"
   },
   "devDependencies": {
