--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-native": "0.51.0",
+    "react-native-elements": "^0.19.0",
     "react-native-splash-screen": "^3.0.6",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.23",
