--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,6 +77,7 @@ project.ext.react = [
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
+apply from: "../../node_modules/react-native-code-push/android/codepush.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -102,7 +103,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -127,10 +128,18 @@ android {
         cruncherEnabled = false
     }
     buildTypes {
+        debug {
+              // Note: CodePush updates should not be tested in Debug mode as they are overriden by the RN packager. However, because CodePush checks for updates in all modes, we must supply a key.
+              buildConfigField "String", "CODEPUSH_KEY", '""'
+        }
+        releaseStaging {
+          buildConfigField "String", "CODEPUSH_KEY", '"98woiZQkbZFkUY51KUY-NDrVmr8a50d93477-2051-47b2-bbc9-2a4e45e175f3"'
+        }
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
             signingConfig signingConfigs.release
+            buildConfigField "String", "CODEPUSH_KEY", '"8FMg3eBRFjOKX8fzsRehHXhEmW4g50d93477-2051-47b2-bbc9-2a4e45e175f3"'
         }
     }
     // applicationVariants are e.g. debug, release
@@ -149,6 +158,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-code-push')
     compile project(':react-native-splash-screen')
     compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
