--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-native": "0.51.0",
+    "react-native-code-push": "^5.2.1",
     "react-native-elements": "^0.19.0",
     "react-native-splash-screen": "^3.0.6",
     "react-native-vector-icons": "^4.5.0",
